# embedding-search

./: .gitignore  .mcp.json  CHANGELOG.md  Cargo.toml  README.md  dist-workspace.toml  rust-toolchain.toml
.cargo/: config.toml
.claude-plugin/: marketplace.json  plugin.json
benchmarks/golden/: BASELINE.md  this-repo.toml
benchmarks/results/: PERF-EXPERIMENTS.md
crates/cli/: Cargo.toml
crates/cli/src/: SKILL.md  main.rs  mcp.rs  root.rs
crates/core/: Cargo.toml  build.rs
crates/core/src/: candle_encoder.rs  candle_gemma_embed.rs  candle_gemma_kernels.metal  candle_gemma_kernels.rs  candle_rerank.rs  chunker.rs  config.rs  db.rs  embedder.rs  error.rs  inspect.rs  lib.rs  rerank.rs  search.rs  sync.rs  vector.rs
crates/core/tests/: core_tests.rs  gitignore.rs  quality.rs  reindex.rs  search_synthetic.rs
crates/core/tests/common/: mod.rs
docs/: OPT4-METAL-KERNELS-PLAN.md  gemma-metal-plan.md
hooks/: prefer-search-session.js  prefer-search-session.sh  prefer-search-turn.js  prefer-search-turn.sh
opencode/: prefer-search.js
scripts/: run-bench.sh
skills/embedding-search/: SKILL.md
tools/quant/: Cargo.toml  README.md  build.rs
tools/quant/src/: lib.rs
xtask/: Cargo.toml
xtask/src/: main.rs
