[package]
name = "embedding-search"
edition.workspace = true
version.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
description = "Fast semantic code search CLI (embeddings + AST chunking)"

[[bin]]
name = "embedding-search"
path = "src/main.rs"

[dependencies]
embedding-search-core.workspace = true
tokio.workspace = true
rmcp.workspace = true
schemars.workspace = true
clap.workspace = true
indicatif.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
