[package]
name = "embedding-search-core"
edition.workspace = true
version.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
blake3.workspace = true
dirs.workspace = true
ignore.workspace = true
rayon.workspace = true
chrono.workspace = true
rusqlite.workspace = true
ureq.workspace = true
fastembed.workspace = true
hf-hub = { version = "0.5", default-features = false, features = ["ureq", "native-tls"] }
ort = { version = "=2.0.0-rc.12", features = ["coreml"] }
usearch.workspace = true
tree-sitter.workspace = true
tree-sitter-rust.workspace = true
tree-sitter-python.workspace = true
tree-sitter-typescript.workspace = true
tree-sitter-javascript.workspace = true
tree-sitter-go.workspace = true
tree-sitter-java.workspace = true
tree-sitter-c.workspace = true
tree-sitter-cpp.workspace = true

[features]
cuda = ["ort/cuda"]
# Deterministic hash embedder (no model load) for benchmarking.
bench-stub = []

[dev-dependencies]
tempfile = "3"
