# Standalone, Apple-Silicon-only dev tooling. NOT a workspace member
# (root [workspace] excludes it) — build explicitly from this dir:
#   cargo run --release --bin cast  -- <in.safetensors> <out> [f16|bf16|f32]
#   cargo run --release --bin bench -- ...
[package]
name = "quant"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
candle-core = { version = "0.10.2", features = ["metal"] }
candle-nn = { version = "0.10.2", features = ["metal"] }
candle-transformers = "0.10.2"
tokenizers = "0.20"
serde_json = "1"

[profile.release]
opt-level = 2
